--- a/PWARClientLauncher/App.config
+++ b/PWARClientLauncher/App.config
@@ -18,8 +18,8 @@
     <add key="LaunchLocal" value="true" />
     <add key="LastUserCode" value="ander" />
     <add key="LastUSerPass" value="ander" />
+    <add key="ClientSettingsProvider.ServiceUri" value="" />
   </appSettings>
-
   <userSettings>
     <PWARClientLauncher.Properties.Settings>
       <setting name="LastRealm" serializeAs="String">
@@ -30,4 +30,16 @@
       </setting>
     </PWARClientLauncher.Properties.Settings>
   </userSettings>
+  <system.web>
+    <membership defaultProvider="ClientAuthenticationMembershipProvider">
+      <providers>
+        <add name="ClientAuthenticationMembershipProvider" type="System.Web.ClientServices.Providers.ClientFormsAuthenticationMembershipProvider, System.Web.Extensions, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" serviceUri="" />
+      </providers>
+    </membership>
+    <roleManager defaultProvider="ClientRoleProvider" enabled="true">
+      <providers>
+        <add name="ClientRoleProvider" type="System.Web.ClientServices.Providers.ClientRoleProvider, System.Web.Extensions, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" serviceUri="" cacheTimeout="86400" />
+      </providers>
+    </roleManager>
+  </system.web>
 </configuration>
