PWARClientLauncher/mythloginserviceconfig: added file to compile folder

--- a/PWARClientLauncher/PWARClientLauncher.csproj
+++ b/PWARClientLauncher/PWARClientLauncher.csproj
@@ -185,7 +185,9 @@
     </BootstrapperPackage>
   </ItemGroup>
   <ItemGroup>
-    <Resource Include="Config\mythloginserviceconfig.xml" />
+    <Content Include="mythloginserviceconfig.xml">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Common\Common.csproj">
