WorldServer/UPDATE_STATE: - Quest state packet
   ! Debug needed
- Update state packet work in progress
- Quest update state work in progress by @Krubster

(cherry picked from commit ea184eb516485a26794005f125a85c2d3cd5ef0c)

--- a/WorldServer/WorldServer.csproj
+++ b/WorldServer/WorldServer.csproj
@@ -294,6 +294,7 @@
     <Compile Include="Managers\Commands\ChapterCommands.cs" />
     <Compile Include="Managers\Commands\CheckCommands.cs" />
     <Compile Include="Managers\Commands\OcclusionCommands.cs" />
+    <Compile Include="Managers\Commands\TestCommands.cs" />
     <Compile Include="Managers\Commands\TicketCommands.cs" />
     <Compile Include="Managers\Commands\CommandDeclarations.cs" />
     <Compile Include="Managers\Commands\CommandsBuilder.cs" />
@@ -318,6 +319,7 @@
     <Compile Include="Managers\Commands\TeleportCommands.cs" />
     <Compile Include="Managers\Commands\WaypointCommands.cs" />
     <Compile Include="NetWork\Handler\SiegeHandlers.cs" />
+    <Compile Include="NetWork\Packets\UpdateState.cs" />
     <Compile Include="Services\ServiceBase.cs" />
     <Compile Include="Services\World\AnnounceService.cs" />
     <Compile Include="Services\World\CellSpawnService.cs" />
